--- a/system/pom.xml
+++ b/system/pom.xml
@@ -22,15 +22,14 @@
         </dependency>
 
         <!-- 集成mybatis -->
-   <!--     <dependency>
+       <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-        </dependency>-->
+        </dependency>
     </dependencies>
-
 
 </project>
