--- a/system/src/main/resources/application.properties
+++ b/system/src/main/resources/application.properties
@@ -4,9 +4,9 @@ server.port=9001
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 
 # 增加数据库连接
-spring.datasource.url=jdbc:mysql://localhost:3306/course?characterEncoding=UTF8&autoReconnect=true
+spring.datasource.url=jdbc:mysql://localhost:3306/courseimooc?characterEncoding=utf8&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 mybatis.mapper-locations=classpath:/mapper/**/*.xml
 logging.level.com.course.system.mapper=trace
