--- a/server/pom.xml
+++ b/server/pom.xml
@@ -10,7 +10,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>server</artifactId>
-
+    <properties>
+        <argLine>-Dfile.encoding=UTF-8</argLine>
+    </properties>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
