--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,13 @@
 				<version>0.0.1-SNAPSHOT</version>
 			</dependency>
 
+			<!-- mybatis分页插件pagehelper -->
+			<dependency>
+				<groupId>com.github.pagehelper</groupId>
+				<artifactId>pagehelper-spring-boot-starter</artifactId>
+				<version>1.2.10</version>
+			</dependency>
+
 			<dependency>
 				<groupId>org.springframework.cloud</groupId>
 				<artifactId>spring-cloud-dependencies</artifactId>
