--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
 		<module>gateway</module>
         <module>server</module>
 		<module>business</module>
+		<module>generator</module>
 	</modules>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -48,11 +49,31 @@
 				<version>0.0.1-SNAPSHOT</version>
 			</dependency>
 
+			<dependency>
+				<groupId>com.alibaba</groupId>
+				<artifactId>fastjson</artifactId>
+				<version>1.2.60</version>
+			</dependency>
+
+			<!-- 模板引擎freemarker -->
+			<dependency>
+				<groupId>org.freemarker</groupId>
+				<artifactId>freemarker</artifactId>
+				<version>2.3.29</version>
+			</dependency>
+
 			<!-- mybatis分页插件pagehelper -->
 			<dependency>
 				<groupId>com.github.pagehelper</groupId>
 				<artifactId>pagehelper-spring-boot-starter</artifactId>
 				<version>1.2.10</version>
+			</dependency>
+
+			<!-- 读xml -->
+			<dependency>
+				<groupId>org.dom4j</groupId>
+				<artifactId>dom4j</artifactId>
+				<version>2.1.1</version>
 			</dependency>
 
 			<dependency>
