完成生成器，编写课程管理功能

--- a/generator/pom.xml
+++ b/generator/pom.xml
@@ -28,6 +28,11 @@
             <groupId>org.dom4j</groupId>
             <artifactId>dom4j</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.course</groupId>
+            <artifactId>server</artifactId>
+        </dependency>
     </dependencies>
 
 
