--- a/file/src/main/resources/application.properties
+++ b/file/src/main/resources/application.properties
@@ -6,15 +6,15 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 file.path=D:/file/imooc/course/
 file.domain=http://127.0.0.1:9000/file/f/
 
-spring.servlet.multipart.max-file-size=50MB
-spring.servlet.multipart.max-request-size=50MB
+spring.servlet.multipart.max-file-size=200MB
+spring.servlet.multipart.max-request-size=200MB
 
 # oss
-oss.accessKeyId=LTAI4Fq5ykqLQnnx7ST1YJx5
-oss.accessKeySecret=ZnTghz55kbvomCNyY3KuOefZpjBtTv
-oss.endpoint=http://oss-cn-shanghai.aliyuncs.com
-oss.domain=http://imooc-course.oss-cn-shanghai.aliyuncs.com/
-oss.bucket=imooc-course
+oss.accessKeyId=LTAIEKaSPwpTY1wA
+oss.accessKeySecret=qsKFMZSCEUEveG7u7j5HC1btsz4eGG
+oss.endpoint=http://oss-cn-beijing.aliyuncs.com
+oss.domain=http://macro-s.oss-cn-beijing.aliyuncs.com
+oss.bucket=macro-s
 
 # vod
 vod.accessKeyId=LTAI4FnmXZVs9Pufn8kt2whV
