--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,13 @@
 				<version>1.2.10</version>
 			</dependency>
 
+			<!-- 阿里云oss -->
+			<dependency>
+				<groupId>com.aliyun.oss</groupId>
+				<artifactId>aliyun-sdk-oss</artifactId>
+				<version>3.8.0</version>
+			</dependency>
+
 			<!-- 读xml -->
 			<dependency>
 				<groupId>org.dom4j</groupId>
